fixes css file priorities

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
-.dropdown-submenu {
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
+
+/*.dropdown-submenu {
     position: relative;
 }
 
@@ -6,4 +15,4 @@
     top: 0;
     left: 100%;
     margin-top: -1px;
-}
+}*/
