--- a/css/carousel.css
+++ b/css/carousel.css
@@ -52,15 +52,38 @@ body {
 .carousel .item {
   height: 500px;
   background-color: #777;
+  /*overflow: hidden;
+  resize: both;*/
 }
 .carousel-inner > .item > img {
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  overflow: hidden;
+  /*object-position: 0 100% 100% 100%;*/
+  /*display: block;
+  width: auto;
+  height: auto;*/
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*min-width: 100%;*/
+  /*min-height: 100%;*/
+  /*height: 500px;*/
+  /*max-width: none;*/
+}
+
+/*.carousel-image {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 500px;
+  max-width: none;
 }
-
+*/
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
