--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,7 +4,7 @@
 
 body {
   padding-top: 0;
-  padding-bottom: 40px;
+  padding-bottom: 0;
   color: #5a5a5a;
 }
 
@@ -34,56 +34,56 @@ body {
   width: auto;
 }
 
+.navbar {
+  margin-top: 0;
+}
+
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+  height: 400px;
+  margin-top: 110px;
+  margin-bottom: 100px;
+  padding-left: 0;
+  padding-right: 0;
+  border-radius: 8px;
+  box-shadow: 3px 3px 6px 5px rgba(0, 0, 0, 0.5);
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
 }
 
+.carousel-inner {
+  border-radius: inherit;
+}
+
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  height: 400px;
   background-color: #777;
-  /*overflow: hidden;
-  resize: both;*/
+  border-radius: inherit;
 }
 .carousel-inner > .item > img {
   width:100%;
   height:100%;
   object-fit: cover;
   overflow: hidden;
-  /*object-position: 0 100% 100% 100%;*/
-  /*display: block;
-  width: auto;
-  height: auto;*/
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*left: 0;*/
-  /*width: 100%;*/
-  /*height: 100%;*/
-  /*min-width: 100%;*/
-  /*min-height: 100%;*/
-  /*height: 500px;*/
-  /*max-width: none;*/
+  border-radius: inherit;
 }
 
-/*.carousel-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-  max-width: none;
+.left-control {
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
 }
-*/
+
+.right-control {
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
