--- a/css/master-styles.css
+++ b/css/master-styles.css
@@ -5,7 +5,7 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   color: #7A7A7A;
-  overflow: scroll;
+  overflow-y: scroll;
   /*font-size: 200% !important;*/
 }
 
